--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -12,8 +12,8 @@ on:
 env:
   # ARTIFACTS_API_KEY, NPM_REGISTRY, PACKAGE_NAME are intended for use by the Ed-Fi
   # Artifacts publishing action in the future.
-  ARTIFACTS_API_KEY: ${{ secrets.AZURE_ARTIFACTS_PERSONAL_ACCESS_TOKEN }}
-  NPM_REGISTRY: //pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging/EdFi/npm/registry/
+  # ARTIFACTS_API_KEY: ${{ secrets.AZURE_ARTIFACTS_PERSONAL_ACCESS_TOKEN }}
+  # NPM_REGISTRY: //pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging/EdFi/npm/registry/
   PACKAGE_NAME: "AdminApp"
   API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
   FRONTEND_IMAGE_NAME: ${{ vars.FRONTEND_IMAGE_NAME }}
@@ -398,7 +398,7 @@ jobs:
           context: "{{defaultContext}}:./"
           cache-from: type=registry,ref=${{ env.API_IMAGE_NAME }}:pre
           cache-to: type=inline
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           file: packages/api/Dockerfile
           tags: ${{ steps.prepare-tags.outputs.APITAGS }}
           labels: ${{ steps.metaapi.outputs.labels }}
@@ -416,7 +416,7 @@ jobs:
           context: "{{defaultContext}}:./"
           cache-from: type=registry,ref=${{ env.FRONTEND_IMAGE_NAME }}:pre
           cache-to: type=inline
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           file: packages/fe/Dockerfile
           tags: ${{ steps.prepare-tags.outputs.FETAGS }}
           labels: ${{ steps.metafe.outputs.labels }}
